# pair-research-matching-alg

./: .pre-commit-config.yaml  Pipfile  README.md  mwmatching.py  pair_research.py  pairedresearch.py  pyproject.toml  stable_roommates.py
network_analysis/: NetworkAnalysis.ipynb
sr_analysis/: SRMatchingAnalysis.ipynb  SRMatchingTestCases.ipynb
