[project]
name = "pair-research-matching-algorithm"
version = "1.0.0"
requires-python = "~=3.13.0"
dependencies = [
    "pandas",
    "pymongo",
    "seaborn",
    "matplotlib",
    "jupyter",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
