[project]
name = "pair-research-matching-algorithm"
version = "1.0.0"
requires-python = "~=3.13.0"
dependencies = [
    "pandas",
    "pymongo",
    "seaborn",
    "matplotlib",
    "jupyter",
    "dotenv>=0.9.9",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
